src/App.css
/* ... */
.header-container h3 {
  position: absolute;
  left: 16vw;
  margin: 0;
  padding-top: 2rem;
  padding-left: 3rem;
  color: white;
  font-weight: bold;
}

.header-project-titles {
  position: absolute;
  display: flex;
  left: 16vw;
  margin: 1rem 0;
  padding-top: 4rem;
  padding-left: 3rem;
  color: white;
}

.header-project-titles h4 {
  margin-right: 6rem;
}

/* SIDENAV  *******************************************************/

.sidenav-container {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100vh;
  width: 16vw;
  margin-left: 0;
  margin-right: 0;
  background-color: white;
}

.sidenav-icon {
  color: rgba(110, 104, 242, 1);
  text-align: center;
  margin-top: 2rem;
}

.sidenav-icon h3 {
  margin-top: 0;
}

.sidenav-menu ul {
  display: flex;
  flex-direction: column;
  margin-left: 2rem;
  padding: 0;
  text-align: left;
}

.sidenav-menu li {
  list-style: none;
  margin-bottom: 1rem;
}

.sidenav-button button {
  margin: 0 auto;
  background-color: #EE2604;
  color: white;
  font-weight: bold;
  border: 2px solid #EE2604;
  border-radius: 3px;
  padding: 0.33rem 0.5rem;
  cursor: pointer;
  transition: 0.2s ease-in-out;
}

.sidenav-button button:hover {
  background-color: #e85f48;
  border: solid 2px #e85f48;
}

.test-links {
  display: flex;
  flex-direction: column;
  padding-top: 2rem;
}

/* DASHBOARD ******************************************************/

.dashboard-container {
  position: absolute;
  left: 16vw;
  width: 84vw;
  min-height: 80vh;
  background-color: rgb(220,220,220);
}

.dashboard-card-container {
  display: flex;
  justify-content: space-around;
  width: 100%;
  margin: 2rem auto;
}

.dashboard-project-modal {
  position: absolute;
  background-color: rgba(110, 104, 242, 1);
  z-index: 10;
  min-height: 20rem;
  width: 40%;
  border: 3px solid rgba(110, 104, 242, 1);
  border-radius: 10px;
  left: 0;
  right: 0;
  margin: 5rem auto;
}

.dashboard-project-modal h2 {
  color: white;
  font-weight: bold;
  margin: 1rem;
  text-align: center;
}

.dashboard-project-modal form {
  display: flex;
  flex-direction: column;
  margin: 1rem 3rem;
}

.dashboard-project-modal label {
  color: white;
  font-weight: bold;
}

.dashboard-project-modal input[type=text], select {
  width: 100%;
  padding: 0.5rem 20px;
  margin: 8px 0;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 5px;
  box-sizing: border-box;
}

.dashboard-project-modal input[type=submit] {
  width: 100%;
  background-color: #4CAF50;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  border-radius: 4px;
  cursor: pointer;
}

.dashboard-project-modal input[type=submit]:hover {
  background-color: red;
}

.dashboard-project-modal input:last-of-type {
  margin-bottom: 2rem;
}

.dashboard-project-modal button {
  min-height: 3rem;
  min-width: 7rem;
  margin: 0.25rem;
  padding: 0.25rem;
  cursor: pointer;
  font-weight: 700;
  border-radius: 5px;
}

.dashboard-project-modal-btns {
  display: flex;
  justify-content: space-around;
}

.submit-modalBtn {
  background-color: #6CDC03;
  border: solid 3px #6CDC03;
}

.submit-modalBtn:hover {
  background-color: #76EF04;
  border: solid 3px #76EF04;
}

.cancel-modalBtn {
  background-color: #EE2604;
  border: solid 3px #EE2604;
  color: white;
}

.cancel-modalBtn:hover {
  background-color: #e85f48;
  border: solid 3px #e85f48;
}

.grayed-out {
  opacity: 0.2;
  transition: opacity 0.4s;
}

/* PROJECT CARD ***************************************************/

.projectcard-container {
  margin: 1rem 2rem;
  background-color: white;
  border: 1px solid white;
  border-radius: 5px;
  -webkit-box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36); 
  box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36);
}

.projectcard-title {
  display: flex;
  justify-content: space-between;
}

.projectcard-title h4 {
  padding: 0 1rem;
}

.projectcard-title button {
  background-color: rgba(36,27,242, 1);
  color: white;
  font-weight: bold;
  padding: 0 1rem;
  margin: 1rem;
  border: 3px solid rgba(36,27,242, 1);
  border-radius: 5px;
  cursor: pointer;
  transition: 0.2s ease-in-out;
}

.projectcard-title button:hover {
  background-color: rgba(36,27,242, 0.8);
  border: 3px solid rgba(36,27,242, 0.8);
  border-radius: 5px;
  transition: 0.3s ease-in-out;
}

.projectcard-table table {
  margin: 0.4rem auto;
  text-align: center;
  border-collapse: collapse;
  font-size: 0.9em;
  min-width: 100%;
}

.projectcard-table th {
  text-align: left;
  background-color: rgba(36,27,242, 0.15);
  font-weight: bold;
}

.projectcard-table td {
  text-align: left;
}

.projectcard-table th, .projectcard-table td {
  padding: 0.5rem 0.5rem;
}

.projectcard-table tr {
  border-bottom: 1px solid rgba(230, 230, 230, 1);
}

.projectcard-table tr:last-of-type {
  border-bottom: 4px solid rgba(36,27,242, 0.15);
}

/* TICKET CARDS ***************************************************/

.tix-card {
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-width: 18rem;
  min-heigth: 16rem;
  max-height: 24rem;
  border: 3px solid white;
  border-radius: 5px;
  -webkit-box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36); 
  box-shadow: 5px 5px 15px 3px rgba(0,0,0,0.36);
}

.tix-card h4 {
  margin: 0.33rem;
  padding: 0 0.3rem;
  font-weight: 600;
}

.tix-card-color-legend {
  flex: 1;
  display: flex;
  flex-direction: column;
  margin: 1rem 0 0 1rem;
}

.tix-card-color-legend div {
  display: flex;
  align-items: center;
}

.tix-card-color-legend img {
  width: 1rem;
  height: 1rem;
}

.tix-card-color-legend p {
  margin: 0.25rem;
}

.tix-graph svg {
  max-height: 12rem;
  margin-bottom: auto;
}

/* PROJECTBOARD ***************************************************/

.projectboard-container {
  position: absolute;
  left: 16vw;
  width: 84vw;
  min-height: 80vh;
  background-color: rgb(220,220,220);
}
/* ... */

